--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,18 @@ h1 {
 
 }
 
-footer {
-  color: #DBEDF3;
-  font-family: sans-serif;
-}
 
+
+.footer {
+  font-family: sans-serif;
+  font-size: 1rem;
+  color: #DBEDF3;
+  margin-top: 1.5%;
+ 
+  font-family: "Montserrat",sans-serif;
+  
+
+}
 .w {
 background-image: url(images/crash.png);
 }
@@ -78,4 +85,10 @@ background-image: url(images/tom1.png);
   text-align: center;
   margin: 10px;
   background-color: white;
+}
+.social {
+  margin-right: 1.5%;
+  font-size: 2rem;
+
+  margin-top: 5%;
 }
